--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "ext-gd": "^7.3",
         "fideloper/proxy": "^4.4",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.20",
